--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	max-width: 1140px;
+	margin: 0 auto;
+	min-height: 100vh;
+	padding-inline: 16px;
+	background-color: #F9F2E0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@layer base {
+	a {
+		@apply font-medium text-link hover:underline
+	}
 }
