--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   box-sizing: border-box;
 }
 
@@ -12,9 +12,8 @@ body {
   max-width: 1140px;
   margin: 0 auto;
   min-height: 100vh;
-  /* padding-inline: 16px; */
   background-color: #f9f2e0;
-}
+} */
 
 @layer base {
   :root {
@@ -81,6 +80,6 @@ body {
     @apply bg-background text-foreground;
   }
   a {
-    @apply text-link font-medium hover:underline;
+    @apply font-medium text-link hover:underline;
   }
 }
