--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,9 +14,9 @@
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 17 80% 60%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
+    --secondary: 200 95% 14%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 230 78% 7% / 0.6;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
@@ -28,6 +28,7 @@
     --link: 220 100% 52%;
     --success: 142 37% 45%;
     --warning: 4 69% 57%;
+    --disabled: 230 78% 7% / 0.32;
     --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
