--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,6 +75,6 @@
     @apply bg-background text-foreground 
   }
   a {
-    @apply font-medium text-link hover:underline;
+    @apply font-normal text-link hover:underline;
   }
 }
